# spectra

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: cve_lookup.rs  local_scan.rs  pkg_scan.rs
src-tauri/src/: auth_scan.rs  compliance.rs  lib.rs  plugins.rs  vuln_db.rs
src/components/: CommandPalette.tsx  FindingsTable.tsx  GraphView.tsx
src/lib/: dedup.ts  delta.ts  engine.ts  export.ts  html.ts  sarif.ts  spectra.test.ts  tauri.ts
